--- a/index.css
+++ b/index.css
@@ -325,8 +325,10 @@ section {
   background: none;
   border: none;
   font-size: 22px;
-  color: white;
+  text-shadow: #020617;
+  color: rgb(255, 255, 255);
   cursor: pointer;
+  padding-right: 1.5rem;
 }
 
 /* ================================
