--- a/index.css
+++ b/index.css
@@ -347,7 +347,7 @@ section {
     display: flex !important;
     justify-content : center !important;
      /* justify-content: center; */
-  align-items: center !important;
+  /* align-items: center !important; */
     
   } */
 
